Changelog
=========

1.7-dev0 - (unreleased)
---------------------
* Change: plone utilities for RabbitMQ client as extra feature.
  [GhitaB refs #91506]

1.6 - (2018-08-21)
-----------------------
* Feature: add configuration and utilities for RabbitMQ client
  [GhitaB refs #91506]
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

1.5 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

1.4 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

1.3 - (2016-09-05)
------------------
* Bug fix: fixed pylint
  [chiridra refs #72772]

1.2 - (2016-08-29)
------------------
* Change: disabled hearbeat interval to avoid
  disconnections.
  [chiridra refs #72772]

1.1 - (2016-05-12)
------------------
* Change: turned package into a proper plone package
  [ichim-david refs #71940]

1.0 - (2016-05-04)
------------------
* Feature: added documentation
  [alecghica refs #69689]
* Bug fix: fixed package structure
  [alecghica refs #69689]
* Feature: innitial release
  [szabozo0 refs #69689]