@@ -7,16 +7,7 @@
     xmlns:zcml="http://namespaces.zope.org/zcml"
     i18n_domain="plone">
 
-    <include package=".upgrades" />
-
     <include file="profiles.zcml" />
 
-    <browser:page
-      zcml:condition="installed plone.api"
-      name="rabbitmq-client-controlpanel"
-      for="Products.CMFPlone.interfaces.IPloneSiteRoot"
-      permission="cmf.ManagePortal"
-      class=".rabbitmq_plone.RabbitMQClientControlPanelView"
-      />
-
+    <utility factory=".setuphandlers.HiddenProducts" name="eea.rabbitmq.client" />
 </configure>
