@@ -1,18 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_controlpanel"
-    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-    i18n:domain="eea.rabbitmq.client"
-    purge="False">
-
-    <configlet title="RabbitMQ Settings"
-        action_id="rabbitmq_client_settings"
-        appId="eea.rabbitmq.client"
-        category="Products"
-        condition_expr=""
-        url_expr="string:${portal_url}/@@rabbitmq-client-controlpanel"
-        visible="True"
-        i18n:attributes="title">
-      <permission>Manage portal</permission>
-    </configlet>
-
-  </object>
