@@ -1,4 +1,0 @@
-<?xml version="1.0"?>
-<registry>
-    <records interface="eea.rabbitmq.client.rabbitmq_plone.IRabbitMQClientSettings" />
-</registry>
