@@ -1,33 +1,0 @@
-<configure
-  xmlns="http://namespaces.zope.org/zope"
-  xmlns:five="http://namespaces.zope.org/five"
-  xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
-  xmlns:i18n="http://namespaces.zope.org/i18n"
-  xmlns:cmf="http://namespaces.zope.org/cmf"
-  xmlns:browser="http://namespaces.zope.org/browser"
-  i18n_domain="eea.rabbitmq.client">
-
-  <genericsetup:upgradeSteps
-    source="1.1"
-    destination="1.2"
-    profile="eea.rabbitmq.client:default">
-
-    <genericsetup:upgradeDepends
-      title="Upgrade step for eea.rabbitmq.client: import registry."
-      import_steps="plone.app.registry"
-      />
-
-  </genericsetup:upgradeSteps>
-
-  <genericsetup:upgradeSteps
-    source="1.2"
-    destination="1.3"
-    profile="eea.rabbitmq.client:default">
-
-    <genericsetup:upgradeDepends
-      title="Upgrade step for eea.rabbitmq.client: import controlpanel."
-      import_steps="controlpanel"
-      />
-
-  </genericsetup:upgradeSteps>
-</configure>
